--- a/presentation/index.html
+++ b/presentation/index.html
@@ -162,18 +162,34 @@
           ![](observable.png)
         - Observer
           - Bekommt Daten
-        - Subject
-          - Observable *und* Observer
       </script>
       <!--@formatter:on-->
       </section>
 
+      <section>
+        <h2>Operatoren</h2>
+        <ul>
+          <li>Methoden am Observable</li>
+          <ul>
+            <li><code>map/filter/...</code></li>
+          </ul>
+          <li>Kombination von Observables</li>
+          <ul>
+            <li><code>flatMap/withLatestFrom/...</code></li>
+          </ul>
+          <li>Operatoren erzeugen immer neue <code>Observable</code>s</li>
+        </ul>
+      </section>
+
+      <!-- Demo -->
+      <section>
+        <h1>Demo</h1>
+      </section>
+
+
     </section>
 
-    <!-- Demo -->
-    <section>
-      <h1>Demo</h1>
-    </section>
+
 
 
     <section>
