--- a/presentation/index.html
+++ b/presentation/index.html
@@ -173,10 +173,11 @@
 					<section data-markdown>
 						<!--@formatter:off-->
       <script type="text/template">
-        - http://reactivex.io
-        - Implementierungen für
-          - Java, JavaScript/TypeScript, .NET, Scala, Clojure, Swift, etc.
-        - RxJava (https://github.com/ReactiveX/RxJava)
+- initial von Microsoft für C# entwickelt
+- von Netflix Rx auf verschiedene Sprachen portiert
+	- Java, JavaScript/TypeScript, .NET, Scala, Clojure, Swift, etc.
+- RxJava (https://github.com/ReactiveX/RxJava)
+- http://reactivex.io
       </script>
       <!--@formatter:on-->
 					</section>
